--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                     case 'admin':
                         window.location.href = 'admin.html'
                         break
+                    case 'back-office':
+                        window.location.href = 'tickets.html'
+                        break
+                    case 'admin-back-office':
+                        window.location.href = 'backofficeadmin.html'
+                        break
                     default:
                         throw new Error('Invalid user role')
                 }
