--- a/back-office-admin.html
+++ b/back-office-admin.html
@@ -638,12 +638,27 @@
 
                 if (error) throw error;
 
+                if (!employees || !Array.isArray(employees)) {
+                    throw new Error('Invalid employees data received');
+                }
+
                 const container = document.getElementById('employee-cards');
                 const tableBody = document.getElementById('employee-table-body');
                 container.innerHTML = '';
                 tableBody.innerHTML = '';
 
                 employees.forEach(employee => {
+                    // Ensure employee has all required fields
+                    if (!employee || !employee.email || !employee.assignee) {
+                        console.warn('Invalid employee data:', employee);
+                        return;
+                    }
+
+                    // Set default status if not present
+                    if (!employee.status) {
+                        employee.status = 'offline';
+                    }
+
                     if (statusFilter !== 'all' && employee.status !== statusFilter) return;
 
                     // Create and append card
@@ -662,7 +677,7 @@
                 await startStatusTimers();
             } catch (error) {
                 console.error('Error loading employees:', error);
-                showNotification('Failed to load employees', 'error');
+                showNotification('Failed to load employees: ' + error.message, 'error');
             }
         }
 
@@ -999,12 +1014,18 @@
 
         // Helper functions
         function formatStatus(status) {
+            if (!status) {
+                return 'Offline'; // Default status if null/undefined
+            }
             return status.split('-').map(word => 
                 word.charAt(0).toUpperCase() + word.slice(1)
             ).join(' ');
         }
 
         function getStatusIcon(status) {
+            if (!status) {
+                return 'power-off'; // Default icon if null/undefined
+            }
             switch (status) {
                 case 'ready': return 'check-circle';
                 case 'coffee-break': return 'coffee';
@@ -1220,6 +1241,12 @@
 
         // Add the missing createEmployeeCard function
         function createEmployeeCard(employee) {
+            if (!employee || !employee.email || !employee.assignee) {
+                console.error('Invalid employee data provided to createEmployeeCard');
+                return createErrorCard('Invalid employee data');
+            }
+
+            const status = employee.status || 'offline';
             const card = document.createElement('div');
             card.className = 'employee-card';
             card.innerHTML = `
@@ -1229,9 +1256,9 @@
                         <p class="text-sm text-gray-500">${employee.email}</p>
                     </div>
                     <div class="status-dropdown">
-                        <span class="status-indicator status-${employee.status} cursor-pointer" onclick="toggleStatusDropdown(this)">
-                            <i class="fas fa-${getStatusIcon(employee.status)} mr-2"></i>
-                            ${formatStatus(employee.status)}
+                        <span class="status-indicator status-${status} cursor-pointer" onclick="toggleStatusDropdown(this)">
+                            <i class="fas fa-${getStatusIcon(status)} mr-2"></i>
+                            ${formatStatus(status)}
                         </span>
                         <div class="status-dropdown-content">
                             <div class="status-option" onclick="changeEmployeeStatus('${employee.email}', 'ready')">
@@ -1303,6 +1330,21 @@
                         <i class="fas fa-redo-alt mr-2"></i>
                         Reset Breaks
                     </button>
+                </div>
+            `;
+            return card;
+        }
+
+        // Add error card function
+        function createErrorCard(message) {
+            const card = document.createElement('div');
+            card.className = 'employee-card bg-red-50';
+            card.innerHTML = `
+                <div class="flex items-center justify-center p-4">
+                    <div class="text-center">
+                        <i class="fas fa-exclamation-circle text-red-500 text-2xl mb-2"></i>
+                        <p class="text-red-600">${message}</p>
+                    </div>
                 </div>
             `;
             return card;
